env/kubernetes/server/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-server0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-server
  template:
    metadata:
      labels:
        app: app-server
    spec:
      containers:
        - name: app-server
          image: us-east1-docker.pkg.dev/root-furnace-306909/hadocker-images/ha-server:${version}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: gcr-json-key
