env/kubernetes/server/server-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-server-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-server
                port:
                  number: 8080
